fix(alert): make neutral app-level alert action buttons visible (#1445)
The `@extend .btn-neutral-outline;` was causing the neutral alert action
buttons to have the wrong color. I removed the similar statements from
all of the app-level alert types because it's not needed in any of them.

CDE-2089

--- a/projects/angular/src/emphasis/alert/_alert.clarity.scss
+++ b/projects/angular/src/emphasis/alert/_alert.clarity.scss
@@ -306,40 +306,22 @@
 
     &.alert-info {
       @include generateAlertType(app-info);
-
-      .alert-item .btn {
-        @extend .btn-info-outline;
-      }
     }
 
     &.alert-danger {
       @include generateAlertType(app-danger);
-
-      .alert-item .btn {
-        @extend .btn-danger-outline;
-      }
     }
 
     &.alert-neutral {
       @include generateAlertType(app-neutral);
-
-      .alert-item .btn {
-        @extend .btn-neutral-outline;
-      }
     }
 
     &.alert-warning {
       @include generateAlertType(app-warning);
-      .alert-item .btn {
-        @extend .btn-warning-outline;
-      }
     }
 
     &.alert-success {
       @include generateAlertType(app-success);
-      .alert-item .btn {
-        @extend .btn-success-outline;
-      }
     }
 
     .alert-items {
